--- a/index.html
+++ b/index.html
@@ -7,54 +7,86 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="hero">
-      <header>
-        <p id="header-logo"></p>
-        <ul>
-          <li class="header-link"></li>
-          <li class="header-link"></li>
-          <li class="header-link"></li>
-        </ul>
-      </header>
-      <div class="hero-info">
-        <h1></h1>
-        <p></p>
-        <a class="button" href=""></a>
+    <header>
+      <div id="header-width">
+        <div class="nav-bar">
+          <p id="nav-logo">Header Logo</p>
+          <ul class="nav-list">
+            <li><a class="nav-link" href="">header link one</a></li>
+            <li><a class="nav-link" href="">header link two</a></li>
+            <li><a class="nav-link" href="">header link three</a></li>
+          </ul>
+        </div>
+        <div class="hero">
+          <div class="hero-info">
+            <div class="hero-info-text">
+              <h1>This website is awesome</h1>
+              <p>
+                This website has some subtext that goes here under the main
+                title. It's a small font and the color is lower contrast.
+              </p>
+              <a class="button" href="" target="_blank">Sign up</a>
+            </div>
+            <div class="hero-img">
+              <p>this is a placeholder for an image</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="hero-img"></div>
+    </header>
+    <div id="main">
+      <h2 id="tiles-heading">Some random information.</h2>
+      <div id="all-tiles">
+        <div class="tiles">
+          <div class="tiles-img"></div>
+          <p class="tiles-subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="tiles">
+          <div class="tiles-img"></div>
+          <p class="tiles-subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="tiles">
+          <div class="tiles-img"></div>
+          <p class="tiles-subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="tiles">
+          <div class="tiles-img"></div>
+          <p class="tiles-subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+      <div id="quote">
+        <p id="quote-text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p id="quote-author">-Thor, God of Thunder</p>
+      </div>
     </div>
-    <div class="info">
-      <h2></h2>
-      <div>
-        <div class="info-img"></div>
-        <p class="subtext"></p>
-      </div>
-      <div>
-        <div class="info-img"></div>
-        <p class="subtext"></p>
-      </div>
-      <div>
-        <div class="info-img"></div>
-        <p class="subtext"></p>
-      </div>
-      <div>
-        <div class="info-img"></div>
-        <p class="subtext"></p>
+    <div id="action-width">
+      <div class="action">
+        <div class="action-text">
+          <h3 class="action-heading">Call to action! It's time!</h3>
+          <p class="action-text">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div id="action-button">
+          <a class="button" href="" target="_blank">Sign up</a>
+        </div>
       </div>
     </div>
-    <div class="quote">
-      <p id="quote-text"></p>
-      <p id="quote-author"></p>
-    </div>
-    <div class="action">
-      <div>
-        <h3></h3>
-        <p></p>
-      </div>
-      <div class="button" id="button-bottom"></div>
-    </div>
+
     <footer>
-      <p></p>
+      <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
     </footer>
   </body>
 </html>
