fix: removing borders resetted margins/paddings
manually added margins and paddings to elements

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header class="width-1">
-      <div class="width-2">
-        <div class="nav-bar">
+      <nav class="width-2">
+        <div id="nav-bar">
           <p id="nav-logo">Header Logo</p>
           <ul id="nav-list">
             <li><a class="nav-link" href="">header link one</a></li>
@@ -23,8 +23,8 @@
             <li><a class="nav-link" href="">header link three</a></li>
           </ul>
         </div>
-        <div class="hero">
-          <div class="hero-info">
+        <div id="hero">
+          <div id="hero-info">
             <div id="hero-info-text">
               <h1 id="hero-h1">This website is awesome</h1>
               <p id="hero-p">
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </nav>
     </header>
     <div class="width-3">
       <h2 id="tiles-h2">Some random information.</h2>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="width-1" id="quote-background">
-      <div class="width-3">
+      <div class="width-3" id="quote">
         <p id="quote-text">
           This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
